src/test/deca/syntax/valid/this.deca
// Description:
//    Test de this
//
// Resultats:
//    Rien
//

{ 
    this.x = 3;
}
