src/test/deca/syntax/invalid/infinite_float.deca
// Description:
//    programme contenant un float infini
//   
// Resultats:
//    Ligne 10 :  Infinite float error

// 

{
    float f = 4.1E38;
}